// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomTree should append multiple trees into the same target node 1`] = `
<div>
  <ul
    class="dt-root dt-rose"
    tabindex="0"
  >
    <li
      class="dt-hc"
      data-cc="// 1 Items"
    >
      <span
        class="dt-expandable"
      />
      <span
        class="dt-open-bracket"
      >
        {
      </span>
      <ul>
        <li>
          <span
            class="dt-key"
          >
            name
            <span
              class="dt-colon"
            >
              : 
            </span>
          </span>
          <span
            class="dt-str"
          >
            "foo"
          </span>
        </li>
      </ul>
      <span
        class="dt-dots"
      />
      <span
        class="dt-close-bracket"
      >
        }
      </span>
    </li>
  </ul>
  <ul
    class="dt-root dt-rose"
    tabindex="0"
  >
    <li
      class="dt-hc"
      data-cc="// 1 Items"
    >
      <span
        class="dt-expandable"
      />
      <span
        class="dt-open-bracket"
      >
        {
      </span>
      <ul>
        <li>
          <span
            class="dt-key"
          >
            name
            <span
              class="dt-colon"
            >
              : 
            </span>
          </span>
          <span
            class="dt-str"
          >
            "foo"
          </span>
        </li>
      </ul>
      <span
        class="dt-dots"
      />
      <span
        class="dt-close-bracket"
      >
        }
      </span>
    </li>
  </ul>
</div>
`;

exports[`DomTree should append the generated tree to the target element 1`] = `
<div>
  <ul
    class="dt-root dt-rose"
    tabindex="0"
  >
    <li
      class="dt-hc"
      data-cc="// 1 Items"
    >
      <span
        class="dt-expandable"
      />
      <span
        class="dt-open-bracket"
      >
        {
      </span>
      <ul>
        <li>
          <span
            class="dt-key"
          >
            name
            <span
              class="dt-colon"
            >
              : 
            </span>
          </span>
          <span
            class="dt-str"
          >
            "foo"
          </span>
        </li>
      </ul>
      <span
        class="dt-dots"
      />
      <span
        class="dt-close-bracket"
      >
        }
      </span>
    </li>
  </ul>
</div>
`;

exports[`DomTree should generate a tree for JSON data 1`] = `
<div>
  <ul
    class="dt-root dt-rose"
    tabindex="0"
  >
    <li
      class="dt-hc"
      data-cc="// 3 Items"
    >
      <span
        class="dt-expandable"
      />
      <span
        class="dt-open-bracket"
      >
        {
      </span>
      <ul>
        <li>
          <span
            class="dt-key"
          >
            location
            <span
              class="dt-colon"
            >
              : 
            </span>
          </span>
          <span
            class="dt-str"
          >
            "foo"
          </span>
          <span
            class="dt-separator"
          >
            ,
          </span>
        </li>
        <li>
          <span
            class="dt-key"
          >
            district
            <span
              class="dt-colon"
            >
              : 
            </span>
          </span>
          <span
            class="dt-str"
          >
            "bar"
          </span>
          <span
            class="dt-separator"
          >
            ,
          </span>
        </li>
        <li
          class="dt-hc"
          data-cc="// 2 Items"
        >
          <span
            class="dt-expandable"
          />
          <span
            class="dt-key"
          >
            coordinates
            <span
              class="dt-colon"
            >
              : 
            </span>
          </span>
          <span
            class="dt-open-bracket"
          >
            {
          </span>
          <ul>
            <li>
              <span
                class="dt-key"
              >
                lat
                <span
                  class="dt-colon"
                >
                  : 
                </span>
              </span>
              <span
                class="dt-str"
              >
                "0.365"
              </span>
              <span
                class="dt-separator"
              >
                ,
              </span>
            </li>
            <li>
              <span
                class="dt-key"
              >
                long
                <span
                  class="dt-colon"
                >
                  : 
                </span>
              </span>
              <span
                class="dt-str"
              >
                "0.365"
              </span>
            </li>
          </ul>
          <span
            class="dt-dots"
          />
          <span
            class="dt-close-bracket"
          >
            }
          </span>
        </li>
      </ul>
      <span
        class="dt-dots"
      />
      <span
        class="dt-close-bracket"
      >
        }
      </span>
    </li>
  </ul>
</div>
`;

exports[`DomTree should generate a tree in JSON format 1`] = `
<div>
  <ul
    class="dt-root dt-rose"
    tabindex="0"
  >
    <li
      class="dt-hc"
      data-cc="// 1 Items"
    >
      <span
        class="dt-expandable"
      />
      <span
        class="dt-open-bracket"
      >
        {
      </span>
      <ul>
        <li>
          <span
            class="dt-key"
          >
            "name"
            <span
              class="dt-colon"
            >
              : 
            </span>
          </span>
          <span
            class="dt-str"
          >
            "foo"
          </span>
        </li>
      </ul>
      <span
        class="dt-dots"
      />
      <span
        class="dt-close-bracket"
      >
        }
      </span>
    </li>
  </ul>
</div>
`;
